--- a/ecommerce/.env
+++ b/ecommerce/.env
@@ -1,1 +1,4 @@
+ACCESS_TOKEN_LIFETIME=1440
+REFRESH_TOKEN_LIFETIME=2
+
 SECRET_KEY=django-insecure-8)1=9!qe(^c@d*%7vo1r^09s@h@9#i@%%*yl&d-1y4t@&78l-9
